--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
            <input type="search" id="search" class="search" placeholder="search">
        </form>
    </header>
+   <main id="main">
+       <div class="movie">
+           <img src="images/kevin-mueller-8F9cZvZyU7Q-unsplash.jpg" alt="">
+           <div class="movie-info">
+               <h3>Movies Title</h3>
+           </div>
+       </div>
+   </main>
 
 
 
