--- a/index.html
+++ b/index.html
@@ -18,9 +18,18 @@
            <img src="images/kevin-mueller-8F9cZvZyU7Q-unsplash.jpg" alt="">
            <div class="movie-info">
                <h3>Movies Title</h3>
+               <span class="green">9.8</span>
+           </div>
+           <div class="overview">
+               <h3>OverView</h3>
+               Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id alias ullam odio maxime!
            </div>
        </div>
    </main>
+
+
+
+   
 
 
 
